[FE][FIX] portfolio table header not visible when scrolling

--- a/front-end/src/components/PortfolioChart/PortfolioChart.styles.css
+++ b/front-end/src/components/PortfolioChart/PortfolioChart.styles.css
@@ -1,8 +1,17 @@
+.portfolio-table-container {
+    @apply overflow-scroll;
+}
+
 .portfolio-table {
     @apply border-collapse m-0 p-0 w-full table-fixed;
 
+    thead {
+        @apply desktop:sticky desktop:top-0 z-10;
+    }
+
     tr {
         @apply text-app-text-secondary px-app-xs;
+        @apply desktop:sticky desktop:top-0;
     }
 
     th,
